# bevycation_brackeys_first-game-in-godot

./: .gitignore  Cargo.toml  README.md
assets/: LICENSE & CREDITS.txt  first_game.ldtk
src/: main.rs
src/character_controller/: components.rs  mod.rs  systems.rs
src/debugging/: components.rs  mod.rs  systems.rs
src/enemy/: components.rs  mod.rs  systems.rs
src/player/: components.rs  mod.rs  systems.rs
src/world/: components.rs  mod.rs  systems.rs
