[package]
name = "bevycation_first_game"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.13.2"
bevy_xpbd_2d = "0.4.2"
bevy_vector_shapes = "0.7.0"
bevy_editor_pls = "0.8.1"
bevy_ecs_ldtk = {git = "https://github.com/Trouv/bevy_ecs_ldtk.git", branch = "main"}
bevy_collider_gen = {version = "0.2.1", features = ["xpbd_2d"]}

[patch.crates-io]
# Patch unstable version to resolve conflicting dependencies from bevy_ecs_ldtk
bevy_ecs_tilemap = { git = "https://github.com/StarArawn/bevy_ecs_tilemap" }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3