[package]
name = "bevycation_first_game"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version =  "0.13.2", features = ["mp3", "wav"] }
bevy_xpbd_2d = "0.4.2"
bevy_vector_shapes = "0.7.0"
bevy_editor_pls = "0.8.1"
bevy_ecs_ldtk = {git = "https://github.com/Trouv/bevy_ecs_ldtk.git", branch = "main"}
bevy_collider_gen = {version = "0.2.1", features = ["xpbd_2d"]}
leafwing-input-manager = "0.13.3"
bevy_spritesheet_animation = "0.1.0"

[patch.crates-io]
# Patch unstable version to resolve conflicting dependencies from bevy_ecs_ldtk
bevy_ecs_tilemap = { git = "https://github.com/StarArawn/bevy_ecs_tilemap" }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3